--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,18 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">MNIST</h1>
-        <p class="header">Tips and Tricks for Cracking ML&#39;s Favorite Image Dataset</p>
+        <h1>MNIST</h1>
+        <p>Tips and Tricks for Cracking ML&#39;s Favorite Image Dataset</p>
+
+        <p class="view"><a href="https://github.com/fsix/mnist">View the Project on GitHub <small>fsix/mnist</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/fsix/mnist/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/fsix/mnist/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/fsix/mnist">View On GitHub</a></li>
+          <li><a href="https://github.com/fsix/mnist/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/fsix/mnist/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/fsix/mnist">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/fsix">fsix</a></p>
-
-
       </header>
       <section>
         <h1>
@@ -41,6 +39,10 @@
 <h3>
 <a id="deskewing" class="anchor" href="#deskewing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deskewing</h3>
 
+<p>Deskewing images involves offsetting and skewing images so their center of masses coincide with the center of the image and such that the x and y covariance of the pixel intensities is 0. By reversing the proposed affine transformation, we essentially "standardize" the images, making it much easier for the ML algorithm to distinguish between images.</p>
+
+<p><a href="Deskewing.html">Check out the Jupyter Notebook here</a></p>
+
 <h2>
 <a id="optimizing-hyperparameters" class="anchor" href="#optimizing-hyperparameters" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Optimizing Hyperparameters</h2>
 
@@ -50,14 +52,19 @@
 <h3>
 <a id="bayesian-optimization" class="anchor" href="#bayesian-optimization" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bayesian Optimization</h3>
 
+<p>This was too complicated to explain in a single iPython notebook, so we'll release this later.</p>
+
 <h2>
 <a id="adverserial-training" class="anchor" href="#adverserial-training" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Adverserial Training</h2>
 
 <h3>
 <a id="perturbation" class="anchor" href="#perturbation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Perturbation</h3>
 
-<h3>
-<a id="elastic-deformations" class="anchor" href="#elastic-deformations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Elastic Deformations</h3>
+<p>Perturbation is the technique of generating "jittered" images from our original training dataset. In particular, we found that adding random noise, random rotations, skews, and elastic distortions help generalize our dataset against adversarial images.</p>
+
+<p>This technique is a specialized form of training for "adversarial images", when the testing metric is designed to challenge and perform the worst on overfit and nongeneralized models. </p>
+
+<p><a href="Perturbation.html">Check out the Jupyter Notebook here</a></p>
 
 <h2>
 <a id="guiding-approximations" class="anchor" href="#guiding-approximations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Guiding Approximations</h2>
@@ -66,10 +73,11 @@
 <a id="momentum-and-annealing-for-sgd" class="anchor" href="#momentum-and-annealing-for-sgd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Momentum and Annealing for SGD</h3>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/fsix">fsix</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
