Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 <a id="adverserial-training" class="anchor" href="#adverserial-training" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Adverserial Training</h2>
 
 <h3>
-<a id="perturbation" class="anchor" href="#perturbation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Perturbation</h3>
+<a id="perturbing" class="anchor" href="#perturbing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Perturbing</h3>
 
 <p>Perturbation is the technique of generating "jittered" images from our original training dataset. In particular, we found that adding random noise, random rotations, skews, and elastic distortions help generalize our dataset against adversarial images.</p>
 
 <p>This technique is a specialized form of training for "adversarial images", when the testing metric is designed to challenge and perform the worst on overfit and nongeneralized models. </p>
 
-<p><a href="Perturbation.html">Check out the Jupyter Notebook here</a></p>
+<p><a href="Perturbing.html">Check out the Jupyter Notebook here</a></p>
 
 <h2>
 <a id="guiding-approximations" class="anchor" href="#guiding-approximations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Guiding Approximations</h2>
