Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
       </header>
       <section>
         <h1>
-<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h1>
+<a id="a-guide-to-mnist" class="anchor" href="#a-guide-to-mnist" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A Guide to MNIST</h1>
+
+<p>Authored by Dibya Ghosh and Alvin Wan</p>
+
+<h2>
+<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
 
 <p>MNIST is a dataset of handwritten digits published in the 1990s, MNIST is perhaps one of the most iconic exercises for beginning Machine Learning, and a milestone in using computers to structurally analyse images. This guide will serve as an exploration of the MNIST dataset, beginning with simple methods and eventually reaching methods that will reach 99% accuracy.</p>
 
