Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
 
-<p>MNIST is a dataset of handwritten digits published in the 1990s, MNIST is perhaps one of the most iconic exercises for beginning Machine Learning, and a milestone in using computers to structurally analyse images. This guide will serve as an exploration of the MNIST dataset, beginning with simple methods and eventually reaching methods that will reach 99% accuracy.</p>
+<p>This guide is written for coders just beginning with MNIST; MNIST is a dataset of handwritten digits published in the 1990s, MNIST is perhaps one of the most iconic exercises for beginning machine learning - a milestone in using computers to structurally analyse images. This guide will serve as an exploration of the MNIST dataset, looking at several techniques and their effects on training.</p>
 
 <h2>
 <a id="preprocessing-techniques" class="anchor" href="#preprocessing-techniques" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preprocessing Techniques</h2>
@@ -57,7 +57,7 @@
 <h3>
 <a id="bayesian-optimization" class="anchor" href="#bayesian-optimization" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bayesian Optimization</h3>
 
-<p>This was too complicated to explain in a single iPython notebook, so we'll release this later.</p>
+<p>We'll comment on this later.</p>
 
 <h2>
 <a id="adverserial-training" class="anchor" href="#adverserial-training" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Adverserial Training</h2>
